Fix crash in recent files action by not exposing the internal KURL objects to the caller application.

For the reporter: this means that the bug will disappear only if you upgrade kdelibs from the 3.5 branch or wait for KDE 3.5.1.

BUG: 118652

svn path=/branches/KDE/3.5/kdelibs/; revision=490250